<resources>
    <string name="app_name">晓画板</string>
    <string name="app_desc_content">晓画板是一款简便的画图软件，在这里你可以随意涂鸦，画出心中的各种形状。\n\t随身携带，方便好用。\n\t简单画图，轻松手绘。\n\t所有功能免费。</string>
    <string name="service_and_privacy_policy">服务条款和隐私政策</string>
    <string name="hint_one">欢迎使用晓画板APP！</string>
    <string name="hint_two">我们将严格按照上述协议为您提供服务，保护您的信息安全，点击“同意”即表示您已阅读并同意全部条款，可以继续使用我们的产品和服务。</string>
    <string name="agree">同意</string>
    <string name="disagree_and_quit">不同意并退出APP</string>
    <string name="quit_app_title">退出晓画板APP</string>
    <string name="quit_app_content">亲，要不要再考虑一下？</string>
    <string name="confirm_quit_app">退出应用</string>
    <string name="see_again">再次查看</string>
    <string name="save">保存</string>
    <string name="brush_size">笔刷大小</string>
    <string name="brush_type">笔刷类型</string>
    <string name="brush_color">颜色</string>
    <string name="drawing">小画板</string>
    <string name="local_image">画本集</string>
    <string name="brush">笔刷</string>
    <string name="graphics">图形</string>
    <string name="eraser">橡皮擦</string>
    <string name="clear_screen">清屏</string>
    <string name="revoke">撤回</string>
    <string name="restore">恢复</string>
    <string name="select_background_image">背景</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="save_to_local">保存到手机</string>
    <string name="input_file_name">请输入文件名</string>
    <string name="choose_brush_color">选择画笔颜色：</string>
    <string name="brush_normal">圆笔</string>
    <string name="brush_highlighter">荧光笔</string>
    <string name="none_image">暂无绘本，快去绘画吧</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="custom">自定义</string>
    <string name="confirm">确定</string>
    <string name="title_setting">设置</string>
    <string name="login_and_register">登录/注册</string>
    <string name="go_to_rate">去评分</string>
    <string name="app_privacy_authority">系统隐私权限</string>
    <string name="business_cooperation">商务合作</string>
    <string name="feedback">意见反馈</string>
    <string name="title_account_management">账号管理</string>
    <string name="message_notification">消息提醒</string>
    <string name="user_verified">实名认证</string>
    <string name="user_agreement">用户协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="about_us">关于我们</string>
    <string name="quit_login">退出登录</string>
    <string name="exit_app_when_press_again">再按一次退出程序</string>
    <string name="content_privacy_policy">
        \t\t\t\t用户隐私政策\n\t

我们非常重视用户的隐私和个人信息保护，致力于维持您对我们的信任。我们承诺采取相应的安全保护措施来保护您的个人信息。

\n\t本《用户隐私政策》（简称“本政策”）旨在解释本APP如何收集、存储和使用您的个人信息，以及您如何行使您的隐私权利。

\n\t请您在使用本APP前认真阅读并充分理解本政策的全部内容。如您对本隐私政策有任何疑问，请联系我们。您使用或在我们更新本隐私政策后继续使用我们的产品或服务，即意味着您同意本隐私政策(含更新版本)内容，并且同意我们按照本隐私政策收集、使用、保存和共享您的相关信息。

\n\t本隐私政策包含以下内容：

\n\t· 我们如何收集和使用您的个人信息；

\n\t· 我们如何使用 Cookie 和同类技术；

\n\t· 我们如何共享、转移、公开披露您的个人信息；

\n\t· 我们如何保护您的个人信息；

\n\t· 您的个人信息如何在全球范围转移；

\n\t· 您的权利；

\n\t· 本政策如何更新；

\n\t· 如何联系我们。





\n\t一、 我们如何收集和使用个人信息

\n\t个人信息是指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息。

\n\t我们在收集您的信息时会征求您的明示同意，如果您拒绝，可能会影响本APP内部分功能的使用。

\n\t(一) 我们会出于本政策所述的以下目的，收集和使用您的个人信息：

\n\t1.您在本APP登录注册

\n\t使用手机号登录注册本APP会通过您输入的手机号码及短信验证码进行验证，验证通过后便可以正常使用服务功能；如您不再使用本APP，可在“我的-设置-账号管理-账号注销”对所注册账号进行注销。当帐号注销或被删除后，与该帐号相关的全部服务资料和数据将同时删除，且不可恢复。

\n\t2.为共同向您提供产品服务或改进产品服务的质量或出于对产品服务安全性的考量合理需要，我们可能按照相关法律法规及监管政策的要求或经过您的授权从关联公司、合作伙伴及其他受信任的第三方接收您的个人信息及其他信息。

\n\t(二) 为了向您提供本APP的其他具体服务，我们会获取您的相关手机终端权限：

\n\t1.为了您在本APP中上传头像和进行意见反馈上传图片时，我们会通过弹窗方式征求您的授权，在您授权同意后获取本机存储权限，如不授予该权限将不能使用所对应的功能服务；

\n\t2.为了便于您使用在线支付，我们使用支付宝、微信支付。需要访问您的查看wifi状态权限、查看网络连接权限，用于保障您的正常支付。如不授权该权限您将不能使用在线支付功能服务；

\n\t3.为了让您更好的进行游戏体验，我们在您进行游戏的过程中将会使用您的手机休眠控制相关权限，在体验游戏中防止手机锁屏。

\n\t4.为了便于您及时升级APP体验更新功能，我们会获取您的应用内安装其他应用权限，便于您选择是否升级到最新版本。

\n\t随着本APP功能进一步丰富，后续新增功能如涉及获取用户授权权限时，我们将在您授权同意后才会获取该功能所需权限。如未取得您的授权，我们将不会收集和使用相关信息。

\n\t(三) 为改善服务质量，在遵守国家法律法规及监管政策的前提下，我们可能将收集到的信息用于以下用途：

\n\t1.在我们提供服务时，用于客服服务、安全防范、诈骗监测、存档和备份用途，确保我们向您提供的产品和服务的安全性；

\n\t2.通过信息数据分析，帮助我们设计为您提供更好感知的新服务，改善我们现有服务；

\n\t3.使我们更加了解您如何使用我们的服务，从而针对性地满足您的个性化需求，包括语言设定、个性化的帮助服务和指示，或对您和其他使用我们服务的用户做出其他方面的回应；

\n\t4.评估我们服务中功能、产品、广告和其他促销及推广活动的效果，并加以改善；

\n\t5.软件认证和管理软件升级；

\n\t6.邀请您参与有关我们产品和服务的调查。

\n\t(四)您了解并同意，我们可以通过技术手段对您的个人信息进行去标识化处理，去标识化处理的信息将无法识别您的身份。在此情况下，并在符合相关法律法规及监管政策的前提下，我们可以使用已经去标识化的信息，对其进行分析和利用。

\n\t(五)如果我们需要将信息用于本政策未载明的其它用途时，会事先征求您的同意。

\n\t二、 我们如何使用 Cookie 和同类技术

\n\t为确保本APP正常运转，我们会在您的移动设备上存储名为 Cookie的小数据文件。Cookie通常包含标识符、站点名称、手机型号、系统类型、系统版本、设备屏幕尺寸。 我们不会将Cookie用于本政策所述目的之外的任何用途。您可根据自己的偏好管理或删除Cookie。您可以清除本设备上保存的所有Cookie，大部分网络浏览器都设有阻止Cookie的功能。但如果您这么做，则需要在每一次使用本APP时更改用户设置。

\n\t三、我们如何共享、转移和公开披露个人信息

\n\t(一) 共享

\n\t未经您事先同意,我们不会与我们公司以外的任何公司、组织和个人分享您的个人信息，但以下情况除外：

\n\t1.在获取明确同意的情况下共享：获得您的事先明确同意后，我们会与其他方共享您的个人信息。

\n\t2.我们可能会根据法律法规及监管政策要求，或按行政、司法机关的强制性要求，与第三方或者行政、司法机关共享您的个人信息。

\n\t3.您授权银行、征信机构第三方向我们查询、收集您在本APP的信息，或者我们会在法律法规及监管政策允许范围内及您对第三方的授权范围内向第三方共享您的信息，我们会依据与第三方的约定，在对个人信息来源的合法性进行确认后，在符合法律法规及监管政策的前提下共享您的这些个人信息。

\n\t4. 第三方SDK类服务商：我们产品中可能会包含第三方SDK或其他类似的应用程序，如您在我们平台上使用这类由第三方提供的服务时，您同意将由其直接收集和处理您的信息（以嵌入代码、插件等形式），第三方SDK类服务商收集和处理信息等行为遵守其自身的隐私条款，同样也适用于本政策。

\n\t(二)转移

\n\t我们不会将您的个人信息转移给任何公司、组织和个人，但以下情况除外：

\n\t1.在获取明确同意的情况下转移：获得您的明确同意后，我们会向其他方转移您的个人信息；

\n\t2.在涉及合并、收购或破产清算时，如涉及到个人信息转移，我们会要求新的持有您个人信息的公司、组织继续受此隐私政策的约束，否则我们将要求该公司、组织重新向您征求授权同意；

\n\t3.相关法律法规规定的或我们与您约定的其他情形。

\n\t(三)公开披露

\n\t我们仅会在以下情况下，公开披露您的个人信息：

\n\t1.获得您明确同意后；

\n\t2.基于法律的披露：在法律、法律程序、诉讼或政府主管部门强制性要求的情况下，我们可能会公开披露您的个人信息。

\n\t四、我们如何保护您的个人信息

\n\t(一) 我们承诺将严格按照国家有关规定做好用户信息安全防护工作。为保障您的信息安全，我们会使用必要安全技术及配套的管理体系来防止您的信息被泄露、毁损或者丢失。我们已建立相关内控制度，对可能接触到您信息的工作人员采取最小够用授权原则；不断对工作人员培训相关法律法规、隐私政策和安全意识，对工作人员处理您的信息的行为进行系统监控。我们并将接受相关国家机构的信息安全检查。

\n\t(二) 您应当妥善保存登录的账号、密码信息，由于您的原因造成账号、密码信息的泄露产生的后果由您承担。为防止信息泄露，我们将采取防泄漏、反爬虫技术手段，限制频繁查询您的信息异常操作行为，以防止账号密码泄露、他人冒用身份造成您产生不良行为记录或者您的信息泄露。

\n\t(三) 由于技术水平限制及可能存在的各种恶意手段，安全问题有可能因我们可控范围外的因素而出现。在发生个人信息安全事件后，我们将按照相关法律法规及监管政策的要求，及时向您告知，难以逐一告知个人信息主体时，我们会采取合理方式发布公告。同时，我们还将按照监管部门要求，主动上报个人信息安全事件的处置情况。

\n\t(四) 我们已使用符合业界标准的安全防护措施保护您提供的个人信息，避免您的信息遭到未经授权访问、公开披露、使用、修改、损坏或丢失的的风险。我们会采取一切合理可行的措施，确保您个人信息的安全性、完整性、真实性、有效性，包括：

\n\t1.使用加密技术对个人信息数据进行存储，使用受信赖的保护机制防止数据遭到攻击；在涉及个人信息需要展示的应用界面，我们采用必要的掩码脱敏手段以确保不受非法窃取；

\n\t2.在您初次使用APP时，我们会遵循最小化原则，结合具体业务场景及其所涉设备权限，按需阐明用途，征求您的充分授权，保障您的知情权和隐私权不受侵犯。

\n\t(五) 对于所收集的信息，我们将在法律规定的最短期限内保存，超出保存期限后，我们将对所收集的信息进行匿名化处理。

\n\t(六）我们承诺将严格按照国家有关规定做好用户信息安全防护工作。为保障您的信息安全，我们会使用必要安全技术及配套的管理体系来防止您的信息被泄露、毁损或者丢失。同时我们已设立用户信息保护责任部门，对可能接触到您信息的工作人员采取最小够用授权原则；不断对工作人员培训相关法律法规、隐私政策和安全意识，对工作人员处理您的信息的行为进行系统监控。

\n\t(七) 在不幸发生个人信息安全事件后，我们将按照法律法规的要求，及时向您告知，您可自主防范和降低风险的建议、对您的补救措施。我们将及时将事件相关情况以邮件、信函、电话、推送通知方式告知您，难以逐一告知个人信息主体时，我们会采取合理、有效的方式发布公告。同时，我们还将按照监管部门要求，主动上报个人信息安全事件的处置情况。

\n\t五、实名认证

\n\t为满足国家相关法律规定及监管要求、确保用户身份真实性、实现反欺诈风险控制、保障系统和服务安全或提供服务之需要，我们将需要收集您的真实身份信息，包括姓名、身份证号相关信息，以完成实名认证。在您实名认证成功后，如有修改需要，我们还将提供仅一次的修改机会，再次认证成功后，认证信息将无法更改。同时，非实名认证的用户将可能会影响您的游戏体验。 您可以在“我的-个人信息-实名认证”中进行相关认证操作。

\n\t六、消息推送

\n\t为更好的为您服务，我们会在客户端内通过消息功能向您推送活动、游戏等信息，推送功能不会获取您的任何个人信息。如不需要该功能，您可以在“我的-设置-消息推送”中进行关闭。

\n\t七、您的个人信息如何在全球范围转移

\n\t我们通过本APP在中华人民共和国境内（下称“中国”，为本隐私政策之目的，不含香港、澳门、台湾地区）收集的个人信息，将存储在中国境内。如果确因业务需要将您的个人信息转移到境外，我们将：1.另行获得您的授权同意，并履行法定程序，在符合届时适用法律的情形下使您的个人信息得到足够的保护；2.转移将在符合届时适用法律要求的前提下进行，即便获得您的授权但是转移方式或者目的不符合相关法律法规规定的，我们也不会进行转移。

\n\t八、您的权利

\n\t(一) 查询、修改您的个人资料

\n\t您可联系客服或在“我的-头像-个人信息”里查询和修改您的个人资料。人工修改将在十五个工作日内完成。

\n\t(二) 账号注销您可以在“我的-设置-账号管理-账号注销”对所您的账号进行注销操作。我们将在十五个工作日内完成对您的账号注销。

\n\t(三) 改变或撤回您的授权信息对于您已经授权同意我们收集和使用的终端设备权限信息，您可以通过“卸载应用”或在设备的“设置-应用管理-晓画板”，选择“删除数据”，撤销隐私授权。您改变或撤回授权同意后，可能无法使用相应的功能服务。

\n\t(四) 删除您的游戏记录和游戏时长记录您可在“我的-我玩过的游戏-更多-编辑”里自行删除您的游戏记录，在“我的-查看所有时长记录明细-时长包-编辑”里删除您的游戏时长记录，同时也可以联系我们申请人工删除服务，申请将在十五个工作日内完成。

\n\t(五) 响应您的申诉请求如果您在使用本APP期间遇到显著影响您合法权益的问题，您可以及时联系我们进行申诉。如上述行为无法解决您的问题，为保障安全，您可能需要提供书面请求。期间我们可能会先要求验证您的身份，然后再处理您的请求。验证通过后，我们将在十五个工作日内作出答复。

\n\t对于您关于用户个人信息的合理请求，我们原则上不收取费用，但对多次重复、超出合理限度的请求，我们将视情况收取一定成本费用。对于无端重复、需要过多技术手段、给他人合法权益带来风险或者非常不切实际的请求，我们可能会予以拒绝。

\n\t在以下情形中，按照法律法规及监管政策要求，我们将无法响应您的请求：

\n\t1.与国家安全、国防安全直接相关的；

\n\t2.与公共安全、公共卫生、重大公共利益直接相关的；

\n\t3.与犯罪侦查、起诉、审判和判决执行直接相关的；

\n\t4.有充分证据表明您存在主观恶意或滥用权利的；

\n\t5.响应您的请求将导致您或其他个人、组织的合法权益受到严重损害的；

\n\t6.涉及商业秘密的。

\n\t九、本政策如何更新

\n\t基于为给您提供更好的服务的目的，并根据业务的发展或法律法规及监管政策变化的要求，我们可能会适时对本政策进行修订和更新。对于修订或更新后的隐私政策，我们将以推送通知或在本APP发布公告的方式来通知您，同时会重新征求您的同意。若您在本政策修订后继续同意使用本APP的服务，即表示您已充分阅读、理解并接受修订后的隐私政策约束。



\n\t\t\t更新时间：2021年9月1日

\n\t\t\t生效时间：2021年9月1日

    </string>
    <string name="version">版本号：v-0.0.0</string>
</resources>