<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="40dp"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingTop="32dp"
    android:paddingEnd="40dp"
    android:paddingBottom="32dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_quit_app_title"
        style="@style/title_middle_with_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:text="@string/quit_app_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_quit_app_content"
        style="@style/label_with_middle_color_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/quit_app_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_quit_app"
            style="@style/title_large_with_color_white"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bg_button_with_radius"
            android:gravity="center"
            android:text="@string/confirm_quit_app" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_see_again"
            style="@style/title_large_with_color_white"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_with_radius"
            android:gravity="center"
            android:text="@string/see_again" />

    </LinearLayout>

</LinearLayout>