<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_horizontal_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_horizontal_08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_horizontal_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_horizontal_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_horizontal_88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_horizontal_99"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_96"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_back"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_horizontal_08"
        app:layout_constraintStart_toStartOf="@+id/corner_path_view"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_revoke"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_setting_button"
        android:text="@string/revoke"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_horizontal_08"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_50"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_restore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_setting_button"
        android:text="@string/restore"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_horizontal_08"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintStart_toEndOf="@+id/guide_line_vertical_50"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal_2" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_setting_button"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_horizontal_08"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_change_paint_color"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change_paint_color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_setting_button"
        android:text="@string/brush_color"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_horizontal_08"
        app:layout_constraintDimensionRatio="w,5:2"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_98"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal_2" />

    <com.board.draw.ui.view.DrawingView
        android:id="@+id/corner_path_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        app:layout_constraintDimensionRatio="w,16:9"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_horizontal_88"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal_08" />

    <com.board.draw.ui.view.VirtualColorSeekBar
        android:id="@+id/brush_size_seek_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_horizontal_70"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_98"
        app:layout_constraintStart_toEndOf="@+id/guide_line_vertical_96"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal_30" />

    <View
        android:id="@+id/bottom_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_alpha_with_top_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal_88" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_show_brush"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableTop="@mipmap/ic_setting_brush"
        android:gravity="center"
        android:text="@string/brush"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_eraser"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal_88" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_eraser"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableTop="@mipmap/ic_eraser"
        android:gravity="center"
        android:text="@string/eraser"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_50"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal_88" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_clear_screen"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableTop="@mipmap/ic_clear_screen"
        android:gravity="center"
        android:text="@string/clear_screen"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintStart_toEndOf="@+id/guide_line_vertical_50"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal_88" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_show_back_image"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableTop="@mipmap/ic_setting_back_button"
        android:gravity="center"
        android:text="@string/select_background_image"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintStart_toEndOf="@+id/btn_clear_screen"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal_88" />

</androidx.constraintlayout.widget.ConstraintLayout>