<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:focusable="false"
        android:text="@string/save_to_local"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@color/bg_color"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/translucent"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintDimensionRatio="h,4:1"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_80"
        app:layout_constraintStart_toEndOf="@+id/guide_line_vertical_20"
        app:layout_constraintTop_toBottomOf="@+id/dialog_save">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_input_file_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_file_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm_save"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_80"
        app:layout_constraintStart_toEndOf="@+id/guide_line_vertical_20"
        app:layout_constraintTop_toBottomOf="@+id/cv_input" />

</androidx.constraintlayout.widget.ConstraintLayout>